--- a/README
+++ b/README
@@ -353,7 +353,7 @@ _>|_||_)_> |_| |_|_||_|(_)| |
  _ _  _   _.| _ _  
 _>(/_(/_ (_||_>(_) 
 ~~~~~~~~~~~~~~~~~~~
-       Program homepage: http://home.wanadoo.nl/squell/id3.html
+       Program homepage: https://squell.github.io/id3
 
 
 
