--- a/id3.man
+++ b/id3.man
@@ -381,5 +381,5 @@ Written by Marc R. Schoolderman <squell@alumina.nl>.
 This is free software; see the source for copying conditions. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH SEE ALSO
-Program homepage: http://home.wanadoo.nl/squell/id3.html
+Program homepage: https://squell.github.io/id3
 
