--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,20 @@
 Changelog for 'id3'.
 
+2015-020 (W04):
+  sedit.cpp: remove leading zeroes from numbers in %subsitution unless _ used
+  getid3v2.cpp/setid3v2.cpp: allow accessing user-defined TXXX/COMM flags with
+    descriptors; for example with -wTXXX:FMPS_Rating
+
+2015-019 (W04):
+  charconv.cpp: use iconv() on platforms that are not __STDC_ISO_10646__ to
+    support non-UTF8 locales on *BSD; disable with -DNO_ICONV
+  id3v2.c/getid3v2.cpp: minimalist ID3v2.4 support; upon write these will be
+    converted to ID3v2.3
+
+2015-016 (W03):
+  id3v2.c: some tweaks to be more accepting/attempt repair of invalid tags
+  added missing #include <cstring> to three files + compilation under MSVC
+
 2007-009 (W02):
   charconv.h: should now compile out of the box in Cygwin without -mno-cygwin
 
@@ -286,16 +301,12 @@ Changelog for 'id3'.
 
 Todo list:
 
-  - Change -R into a switch instead of an option? (Ditch `find' behavior?)
   - Reading MP3 data (Bitrate, length, etc. Half done.)
   - Cross-directory renaming/moving
-  - Setting content descriptors in ID3v2 (how?)
-  - Conditional expressions
   - Long options
   - More things:
     + Support for Ogg Vorbis
     + Support for APEv2
-    + Support for Lyrics3 v2.0 (no priority)
   - Enable multibyte encodings for varexp?
   - Extend substitution capabilities (i/o? slice?)
   - User configurable switches (.rc file?)
