--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,16 @@
 Changelog for 'id3'.
 
+2015-024 (W)4):
+  mass_tag.cpp: Unicode-escape sequences (\uXXXX, \UXXXXXXXX) added
+  fileexp.cpp: [bugfix] -R could match too many files in obscure cases
+
 2015-020 (W04):
   [CLI CHANGE]: %##n now means 'pad embedded numbers in %n out to width two'
   sedit.cpp: remove leading zeroes from numbers in %subsitution if # used
-  getid3v2.cpp/setid3v2.cpp: allow accessing user-defined TXXX/COMM flags with
-    descriptors; for example with -wTXXX:FMPS_Rating
+  getid3v2.cpp/setid3v2.cpp: allow writing user-defined TXXX/COMM flags with
+    descriptors; for example with `id3 -2 -wTXXX:FMPS_Rating 42'
+  mass_tag.cpp: allow reading non-standard information with %{TAG}; e.g.
+    '%{TMOO}' to get the 'mood' information in ID3v2.3
 
 2015-019 (W04):
   charconv.cpp: use iconv() on platforms that are not __STDC_ISO_10646__ to
