--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,13 @@
 Changelog for 'id3'.
 
-2015-024 (W)4):
+2015-029 (W05):                                ---------[v0.79]-----------
+  main.cpp: [cli change] if no tags are selected (using -1, -2, -3), id3 will
+    select the best tag to read from; also, in this case ID3v2 will be
+    modified if already present (but not added)
+  main.cpp: [cli change] default operation (without options) is now to view
+    tag info, instead of `do nothing'.
+
+2015-024 (W04):
   mass_tag.cpp: Unicode-escape sequences (\uXXXX, \UXXXXXXXX) added
   fileexp.cpp: [bugfix] -R could match too many files in obscure cases
 
