--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------
-| id3 mass tagger v0.78
+| id3 mass tagger v0.79
 -------------------------------------------------------------
 
 the contents of the source distribution:
@@ -12,6 +12,7 @@ the contents of the source distribution:
  makefile       - generic (gnu) makefile
  makefile.dj    - makefile for djgpp2
  makefile.bcc   - makefile for borland c++
+ makefile.nmk   - makefile for microsoft c++
 
  main.cpp       - main program file                             (C++)
  pattern.*      - + automatic variables                         (C++)
@@ -30,7 +31,8 @@ the contents of the source distribution:
  fileexp.*      - filefinder/matcher                            (C++)
  mass_tag.*     - + tagging engine                              (C++)
  charconv.*     - character conversion                          (C++)
- char_ucs.*     - + ucs2 encoding                               (C++)
+ char_ucs.*     - + utf16 encoding                              (C++)
+ char_utf8.*    - + utf8 encoding                               (C++)
  auto_dir.h     - smart dirent pointer class                    (C++)
 
  id3v1.*        - definitions & data relevant to ID3v1 tag data (C)
@@ -40,12 +42,11 @@ the contents of the source distribution:
 
  id3.man        - raw man page                                  (troff -man)
 
- debian/	- Debian files for creating a .deb package
- rpm/		- RPM specfile for creating a .rpm package
- FreeBSD/	- FreeBSD port files
+ debian/        - Debian files for creating a .deb package
+ rpm/           - RPM specfile for creating a .rpm package
 
 ---------------------------------------------------------------
-| (c) squell 2003-2006 - copyright notice
+| (c) squell 2003-2015 - copyright notice
 -------------------------------------------------------------
 
 All files in this package are copyrighted. This is NOT public domain software.
@@ -76,7 +77,7 @@ This should create a .deb file in the parent directory.
 * .rpm (Fedora/CentOS)
 
 The simplest way is to simply run:
-> rpmbuild -ta id3-0.78.tar.gz
+> rpmbuild -ta id3-0.79.tar.gz
 
 Then look in your RPM build area ($HOME/rpmbuild)
 
@@ -90,20 +91,14 @@ Install audio/id3mtag from the ports collection.
 
 Successfully compiled with (non-exhaustive list):
 
- - GCC 3.x, 4.0     (GNU/Linux, FreeBSD, Solaris, DJGPP, MinGW32)
- - GCC 2.95.x       (GNU/Linux, FreeBSD, DJGPP, MinGW32)
- - Intel C++ 8.1    (GNU/Linux)
- - Borland C++ 5.5  (Win32)
- - Compaq C++ 7.1   (Alpha)
- - Sun C/C++ 5.7    (SPARC)
+ - GCC 4.x, 5.0
+ - Clang 3.x
+ - Microsoft C/C++ 16.x/18.x
+ - Borland/Embarcadero C++ 5.5/6.90
+ - Oracle/Sun C++ 5.13, using STLport4
 
-This program is mostly written in 100% portable ISO C/C++ so basically all
-you need is a modern, standards-compliant C/C++ compiler.
-
-I recommend using DJGPP to build a 32bit DPMI program if you're using a
-version of Windows 9X (e.g. 95, 98, Me) because of the kludgy support for
-native Win32 console apps. Likewise, if you're using something based on NT
-such as NT4, 2000 or XP, you should definitely build a native Win32 app.
+This program is mostly written in portable ISO C90/C++03 so basically all
+you need is a standards-compliant C/C++ compiler.
 
 ===
 Makefiles
@@ -119,7 +114,9 @@ Pick the makefile you need and rename it to 'makefile' or use 'make -f':
 
   'makefile.dj'  is for DOS systems using DJGPP v2
 
-  'makefile.bcc'  is for building a Win32 executable for Borland C++ 5.5
+  'makefile.nmk'  is for building a Win32 executable with VisualStudio `nmake'
+
+  'makefile.bcc'  is for building a Win32 executable with C++Builder `make'
 
 ===
 Standard makefile targets:
@@ -131,7 +128,7 @@ Standard makefile targets:
  make clean         - removes all files produced by make
 
 'final' assumes you have UPX (http://upx.sourceforge.net/) installed on
-Win32/DOS systems. You should have. :)
+Win32/DOS systems.
 
 Generic GNU/BSD makefile targets & variables:
 
@@ -156,9 +153,6 @@ E.g: "make install prefix=$HOME" to install in $HOME/bin instead. See inside
 ---------------------------------------------------------------
 | useful links
 -------------------------------------------------------------
-
-(Win32) Borland C++ 5.5 (vintage):
-  http://edn.embarcadero.com/article/20633
 
 (Win32) Minimalist GNU for Windows:
   http://www.mingw.org/
